--- a/about.html
+++ b/about.html
@@ -142,9 +142,9 @@ Launched in Delhi 11 years ago, Ked has grown from a home project to one of the 
     <img src="https://www.w3schools.com/w3css/img_avatar3.png" >
     <div class="content">
     <h4>founder</h4>
-     <h5>Mr. Shreyash Vidyasagar Chekke</h5>
-     <h5>mob.no-8888888888</h5>
-     <h5>mail-xyz@gmail.com</h5>
+     <h5>Mr. Saurav Shankar Shinde</h5>
+     <h5>mob.no-9356641616</h5>
+     <h5>mail-sss14@iitbbs.ac.in</h5>
     <div class="social">
         <a href="#"><i class="fab fa-instagram-square"></i></a>
         <a href="#"><i class="fab fa-facebook-square"></i></a>
@@ -156,7 +156,7 @@ Launched in Delhi 11 years ago, Ked has grown from a home project to one of the 
      <img src="https://www.w3schools.com/w3css/img_avatar3.png" >
     <div class="content">
      <h4> Co-founder</h4>
-     <h5>Ms.Rashi Burande </h5>
+     <h5>Ms.Nagsen Waghmare </h5>
      <h5>mob.no-8888888889</h5>
      <h5>mail-abc@gmail.com</h5>  
     <div class="social">
