--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@ h2{
    <li><a href="contact.html">Contact</a></li>
    <li><a href="about.html">About Us</a></li>
 </div>
-  <h1>The Restaurant<br>Shreyash</h1>
+  <h1>The Restaurant<br>Saurav</h1>
   <h2>Homestyle Meals Everyday</h2>
   
   <div id="button" class="button">
